# MiniFazenda

./: .gitignore  CMakeLists.txt  README.md  Tamanhos.md  remover_fundo.py
assets/: config.ini
doc/: ARCHITECTURE.md  Tamanhos.md  arquitetura.md  auditoria_tasks.md  auditoria_tecnica_para_corrigir.md  grid_de_ocupacao.md  grid_de_ocupacao_contrato.md  personagem.md  personagem_movimento.md
src/: Ativos.hpp  CameraDoJogo.hpp  CaminhosDosAssets.hpp  Configuracao.hpp  Constantes.hpp  Desenho.hpp  GradeDeCanteiros.hpp  InterfaceDoJogo.hpp  Isometrico.hpp  Principal.cpp  RecursosDoJogo.hpp  SistemasDoJogo.hpp  Tipos.hpp
src/Aplicacao/Estado/: EstadoDoJogo.hpp
src/Aplicacao/Servicos/: InicializadorDaFazenda.hpp  ServicoDeFerramentas.hpp  ServicoDeTempo.hpp
src/Apresentacao/: ConfiguracoesDoLayout.hpp
src/Apresentacao/Animacao/: AnimacaoIdleDoPersonagem.hpp  AnimadorDoPersonagem.hpp
src/Apresentacao/Camera/: CameraDoJogo.hpp
src/Apresentacao/Cenas/: CenaFazenda.hpp
src/Apresentacao/Interface/: AreaDeInteracao.hpp  EstadoDaCenaFazenda.hpp
src/Apresentacao/Interface/BarraDeFerramentas/: BarraDeFerramentas.hpp
src/Apresentacao/Interface/Loja/: ControladorDaLoja.hpp  EstadoDaLoja.hpp  LayoutDaLoja.hpp  TiposDaLoja.hpp
src/Apresentacao/Isometria/: Isometrico.hpp
src/Apresentacao/Renderizacao/Cursores/: CursorCustomizado.hpp
src/Apresentacao/Renderizacao/Mundo/: DesenhoDoMundo.hpp  RenderizadorDaFazenda.hpp  RenderizadorDoPersonagem.hpp
src/Apresentacao/Renderizacao/Primitivas/: PrimitivasSDL.hpp
src/Apresentacao/Renderizacao/UI/: BarraDeFerramentasRenderer.hpp  HudRenderer.hpp  IconesDasFerramentas.hpp  LojaRenderer.hpp  TooltipDoCanteiroRenderer.hpp
src/Compartilhado/: Constantes.hpp  ConstantesDaCamera.hpp  ConstantesDaInterface.hpp  ConstantesDaIsometria.hpp  ConstantesDaJanela.hpp  ConstantesDoJogo.hpp
src/Compartilhado/Animacao/: ConfigAnimacao.hpp
src/Compartilhado/Geometria/: Posicoes.hpp
src/Dominio/Animacao/: .gitkeep  AnimacaoIdle.hpp
src/Dominio/Canteiros/: Canteiro.hpp  EstadoDoCanteiro.hpp
src/Dominio/Ferramentas/: CursorDeColheita.hpp  Enxada.hpp  Ferramenta.hpp  FerramentaDaLoja.hpp  FerramentaDeSemente.hpp  PresenteAcelerador.hpp  RegistroDeFerramentas.hpp  RemovedorDeTerra.hpp  ResultadoDaFerramenta.hpp  TipoDeFerramenta.hpp
src/Dominio/Grade/: GradeGlobalDeCanteiros.hpp  TileDeTerra.hpp
src/Dominio/Jogador/: Jogador.hpp
src/Dominio/Mapa/: MapaDaFazenda.hpp
src/Dominio/Ocupacao/: GridDeOcupacao.hpp
src/Dominio/Personagem/: Personagem.hpp
src/Dominio/Plantas/: FabricaDePlantas.hpp  Planta.hpp
src/Dominio/Plantas/Especies/: PlantaMirtilo.hpp
src/Infraestrutura/Assets/: CatalogoVisualDePlantas.hpp  ConfigVisualDoPersonagem.hpp  EstadoVisualDaPlanta.hpp  GerenciadorDeAtivosSDL.hpp  LocalizadorDeAssets.hpp  RecursosDaFazenda.hpp  RecursosDaLoja.hpp
src/Infraestrutura/Configuracao/: LeitorDeConfiguracao.hpp
src/Infraestrutura/SDL/: ContextoSDL.hpp
tests/: TestesLogica.cpp
